--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-HTTP_SERVER_HOST=http://majdidekellvmi
-WEBSOCKET_SERVER_HOST=ws://majdidekellvmi
+HTTP_SERVER_HOST=http://localhost:8008
+WEBSOCKET_SERVER_HOST=ws://localhost:7000
