--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_HTTP_SERVER_HOST=http://localhost:8008
-NEXT_PUBLIC_WEBSOCKET_SERVER_HOST=ws://localhost:7000
+NEXT_PUBLIC_HTTP_SERVER_HOST=https://tapsnapbackend.akosdombi.dev
+NEXT_PUBLIC_WEBSOCKET_SERVER_HOST=wss://tapsnapbackend.akosdombi.dev
